# irregular-verbs-bot

./: .gitignore  CMakeLists.txt  README.md
localdb/: verbs.json
src/: main.cpp
